# Cyptex128

./: .gitignore  COMPLETION_REPORT.md  CONTEXT.md  Cargo.toml  DEHASH_DOCS.md  FINAL_REPORT.md  HARDWARE_PERFORMANCE_REPORT.md  HARDWARE_PERFORMANCE_SCALING.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MAXIMUM_BANDWIDTH_PERFORMANCE.md  MAXIMUM_OPTIMIZATION_GUIDE.md  MAXIMUM_PERFORMANCE_ACHIEVED.md  MIGRATION_LOG.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_SUMMARY.md  PROJECT_COMPLETION.txt  QUICK_REFERENCE.md  QUICK_REFERENCE_OLD.md  README.md  README_OLD.md  SPEED_CORRECTION_LOG.md  SUMMARY.txt  VISION.md  bench_parallel.rs  bench_simd8.rs  bench_ultra_fast  bench_ultra_fast.rs  bench_unrolled.rs  cyptex128  perf_test.sh  quickstart.sh  ultra_fast_test.rs
Documents/: ACHIEVEMENT_SUMMARY.md  BIG_DATA_SMALL_HASHES.md  COMPLETION_CHECKLIST.md  COMPLETION_REPORT.md  CONTEXT.md  FINAL_REPORT.md  INDEX.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_REPORT.md  PROJECT_COMPLETION.txt  QUICK_REFERENCE.md  QUICK_START.md  REAL_WORLD_PERFORMANCE.md  SUCCESS_REPORT.txt  SUMMARY.txt  VERIFICATION_SUMMARY.md  VISION.md  _VERIFICATION_COMPLETE.txt
TEST/: lorem-ipsum.txt
examples/: peak_performance.rs
src/: lib.rs  main.rs  parallel.rs  tui.rs
