[package]
name = "cyptex128"
version = "1.0.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "cyptex128"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
anyhow = "1.0"
rayon = "1.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
lto = true
